# wordvec

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: bench.yml  ci.yml
benches/: criterion.rs  iai.rs  impls.rs
benches/impls/: smallvec.rs  std_vec.rs  thinvec.rs  wordvec.rs
src/: drain.rs  internal.rs  into_iter.rs  lib.rs  macros.rs  polyfill.rs  retain.rs  serde_impl.rs  serde_tests.rs  tests.rs  trivial_traits.rs
