[package]
name = "wordvec"
version = "0.0.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
license = "MIT"
description = "A compact `SmallVec<T>`-like container with only `align_of::<T>()` overhead for small stack-only instances."
categories = ["data-structures", "no-std"]

[dev-dependencies]
criterion = "0.5.1"
iai = {git = "https://github.com/sigaloid/iai", rev = "d56a597"}
paste = "1.0.15"
smallvec = "1.15.0"
thin-vec = "0.2.14"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
